tests/lean/eraseSimp.lean.expected.out
eraseSimp.lean:4:18-4:21: error: 'foo' does not have [simp] attribute
